# xdof

./: .gitignore  Cargo.toml  README.md  license
src/: D.rs  F.rs  O.rs  X.rs  main.rs
xdof-light/: Cargo.toml  xdof-light.md
xdof-light/src/: D.rs  F.rs  main.rs
