[package]
name = "xdof"
version = "0.1.0"
license = "GPL-3.0"
authors = ["TheSlam <32799244+salmmanfred@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfile = "1.1.0"
attohttpc = { version = "0.16.1", features = ["json", "form"] }
serde_json = "1.0.62"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rustDatabook = "1.1.3"
chrono = "0.4.19"

[dependencies.cursive]
version = "0.16.3"
default-features = false
features = ["crossterm-backend"]

[dependencies.terminal]
version = "0.2"
features = ["crossterm-backend"]
