[package]
name = "xdof-light"
version = "1.0.0"
authors = ["TheSlam <32799244+salmmanfred@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfile = "1.1.0"
rustDatabook = "1.1.3"

[dependencies.cursive]
version = "0.16.3"
default-features = false
features = ["crossterm-backend"]